# gooc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README  config.h.in  make-release.sh
cmake/: CheckStructPacking.c.in
docs/: index.html
docs/html/: anim-text.html  anims.html  const-eid.html  const-met.html  const-sec.html  const-vol.html  event-send.html  event-test.html  events.html  example1-1.html  example1-2.html  example1-3.html  example1-4.html  example1-5.html  example1.html  examples.html  expressions.html  lexer.html  license.html  line-block.html  line-break.html  line-do.html  line-instruction.html  line-return.html  line-return2.html  line-while.html  op-arithmetic.html  op-bitlogical.html  op-comparison.html  op-conditional.html  op-logical.html  op-other.html  parser.html  spawns.html  start.html  state-code.html  state-define.html  state-extern.html  state-flags.html  state-modifiers.html  (+13 more)
manual/: index.html
manual/html/: anim-font.html  anim-frag.html  anim-sprite.html  anim-vertex.html  anims.html  const-deg.html  const-gint.html  const-int.html  const-num.html  const-pit.html  const-sca.html  expressions.html  intro.html  lexer.html  line-if.html  op-address.html  op-array.html  op-assignment.html  op-bitshift.html  op-eins.html  op-field.html  (+20 more)
thecl/: CMakeLists.txt  c1_gool.h  c2_gool.h  ecsparse.y  ecsscan.l  expr.c  expr.h  field.c  field.h  gmips.c  gmips.h  gool_ins.c  gool_ins.h  thecl.1  thecl.c  thecl.h  thecl.html  thecl10.c
thtk/: detect.c  thdat.c
util/: list.c  list.h  program.c  util.h  value.c  value.h
